# AAM

./: .gitignore  README.md  SETUP.md  aam.sh  pubspec.yaml
backend/: .env  .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  attendance.py
backend/app/api/routes/: alumnos.py  cursos.py
backend/app/core/: config.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: alumno.py  asistencia.py  curso.py  registro_asistencia.py  usuario.py
backend/app/domain/repositories/: alumno_repository.py  asistencia_repository.py  curso_repository.py  usuario_repository.py
backend/app/domain/usecases/: alumno_usecases.py  curso_usecases.py  get_alumnos.py  registrar_asistencia.py
backend/app/infrastructure/: __init__.py  database.py  models.py
backend/app/infrastructure/models/: alumno_model.py  curso_model.py  registro_ingreso_model.py  usuario_model.py
backend/app/infrastructure/repositories/: alumno_repository_impl.py  asistencia_repository_impl.py  curso_repository_impl.py
backend/domain/models/: __init__.py  alumno.py  curso.py  excepcion_horario.py  horario.py  lector.py  registro_asistencia.py  usuario.py
backend/domain/services/: __init__.py  duplicado.py  estado_asistencia.py  generador_clave.py  horario_vigente.py
backend/domain/value_objects/: __init__.py  correo.py  dni.py  estado_asistencia.py  franjas_horarias.py  metodo_registro.py  nombre_completo.py  rol.py  tipo_excepcion.py  turno.py  uid_pulsera.py
(+80 files in other folders)
