[tool.poetry]
name = "aam-backend"
version = "0.1.0"
description = "AAM Backend API"
authors = []

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
starlette = "^0.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
